--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Andrew Kuo",
   "license": "MIT",
   "dependencies": {
+    "gl-matrix": "^2.7.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4"
