--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "draftstone",
   "version": "1.0.0",
   "description": "A browser-based dungeon builder.",
-  "main": "index.js",
+  "main": "./dist/app.bundle.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --config webpack.config.js",
     "build": "webpack --mode production --config webpack.config.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andykuo1/draftstone.git"
+  },
   "author": "Andrew Kuo",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/andykuo1/draftstone/issues"
+  },
+  "homepage": "https://github.com/andykuo1/draftstone#readme",
   "dependencies": {
-    "gl-matrix": "^2.7.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4"
